tests/anp_banp_explain_demo/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-apps
  labels:
    security: internal
    kubernetes.io/metadata.name: internal-apps
---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    kubernetes.io/metadata.name: monitoring
