tests/anp_banp_explain_demo/workloads.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: internal-apps
  name: internal-app-a
  labels:
    security: internal
spec:
  containers:
    - name: myfirstcontainer
      image: app-a-image



---

apiVersion: v1
kind: Pod
metadata:
  namespace: monitoring
  name: monitoring-service
  labels:
    security: monitoring
spec:
  containers:
    - name: monitoring-service
      image: monitoring-service-image

---
